# quadruped

./: .bazelrc  .gitignore  MODULE.bazel  README.md  barkour_gait.py  bazel-bin  bazel-out  bazel-quadruped  bazel-testlogs  brax_apg.py  compare_runs.py  config.yaml  controller_script.py  gae_test.py  generate_data.py  get_data.py  inference_time.py  load_test.py  mujoco_policy.py  play_cartpole.py  play_foraging.py  play_policy.py  play_unitree.py  play_walter.py  regress_2.py  regress_params.py  regress_params_v2.py  requirements_lock.txt  run_joystick_policy.py  sweep.py  sweep_config.yaml  test.py  test_env.py  train.py  train_apg.py  train_barkour.py  train_baseline.py  train_baseline_orientation.py  train_baseline_q.py  train_curriculum.py  (+10 more)
_src/: brax_load.py  brax_train.py  brax_train_.py  checkpoint.py  control_utilities.py  load_checkpoint.py  mjx_brax_quadruped_policy  model.py  optimization_utilities.py  render_utilities.py  save_checkpoint.py  statistics_utilities.py  test_env.py  train.py  unitree_brax.py
_src/checkpoints/310/metadata/: metadata
_src/checkpoints/310/state/: manifest.ocdbt
_src/checkpoints/310/state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/310/statistics_state/: manifest.ocdbt
_src/checkpoints/310/statistics_state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/320/metadata/: metadata
_src/checkpoints/320/state/: manifest.ocdbt
_src/checkpoints/320/state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/320/statistics_state/: manifest.ocdbt
_src/checkpoints/320/statistics_state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/330/metadata/: metadata
_src/checkpoints/330/state/: manifest.ocdbt
_src/checkpoints/330/state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/330/statistics_state/: manifest.ocdbt
_src/checkpoints/330/statistics_state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/340/metadata/: metadata
_src/checkpoints/340/state/: manifest.ocdbt
_src/checkpoints/340/state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/340/statistics_state/: manifest.ocdbt
_src/checkpoints/340/statistics_state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/350/metadata/: metadata
_src/checkpoints/350/state/: _sharding  manifest.ocdbt
_src/checkpoints/350/state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/350/statistics_state/: _sharding  manifest.ocdbt
_src/checkpoints/350/statistics_state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/360/metadata/: metadata
_src/checkpoints/360/state/: _METADATA  manifest.ocdbt
_src/checkpoints/360/state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/360/statistics_state/: manifest.ocdbt
_src/checkpoints/360/statistics_state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/370/metadata/: metadata
_src/checkpoints/370/state/: manifest.ocdbt
_src/checkpoints/370/state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/370/statistics_state/: _METADATA  manifest.ocdbt
_src/checkpoints/370/statistics_state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/380/metadata/: metadata
_src/checkpoints/380/state/: manifest.ocdbt
_src/checkpoints/380/state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/380/statistics_state/: manifest.ocdbt
_src/checkpoints/380/statistics_state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/390/metadata/: metadata
_src/checkpoints/390/state/: checkpoint  manifest.ocdbt
_src/checkpoints/390/state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/390/statistics_state/: manifest.ocdbt
_src/checkpoints/390/statistics_state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/400/metadata/: metadata
_src/checkpoints/400/state/: manifest.ocdbt
_src/checkpoints/400/state/ocdbt.process_0/: manifest.ocdbt
_src/checkpoints/400/statistics_state/: checkpoint  manifest.ocdbt
_src/checkpoints/400/statistics_state/ocdbt.process_0/: manifest.ocdbt
interface/estimators/: BUILD  README.md  estimator.h  kalman.cc  kalman.h
interface/estimators/autogen/: BUILD.bazel  autogen.py
interface/estimators/utilities/: BUILD  utilities.cc  utilities.h
interface/unitree_go2/: BUILD  BUILD.bazel  aliases.h  estimator.h  interface.h  logger.h  osc_interface.h  simulation_interface.h
models/: quadruped_brax.xml
models/barkour/: fixed_leg.xml  fixed_scene.xml
models/cartpole/: inverted_pendulum.xml
models/double_integrator/: double_integrator.xml  foraging_scene.xml
models/unitree_a1/: a1.xml  a1_torque.xml  scene.xml
models/unitree_go2/: go2_mjx.xml  scene_barkour_hfield_mjx.xml  scene_mjx.xml
models/walter/: walter_mjx.xml
src/: barkour.py  brax_load.py  brax_train.py  checkpoint.py  control_utilities.py  custom_wrapper.py  distribution_test.py  distribution_utilities.py  load_checkpoint.py  metric_utilities.py  metrics_utilities.py  mjx_brax_quadruped_policy  model.py  model_.py  model_utilities.py  module_types.py  network_types.py  networks.py  optimization_utilities.py  quadruped.py  render_utilities.py  test_env.py  train.py  training_utilities.py  unitree.py  unitree_brax.py
src/algorithms/apg/: checkpoint_utilities.py  network_utilities.py  train.py
src/algorithms/gb_ppo/: loss_utilities.py  train.py
src/algorithms/ppo/: checkpoint_utilities.py  load_utilities.py  loss_utilities.py  losses.py  network_utilities.py  networks.py  train.py
src/checkpoints/25/: _METADATA  checkpoint
src/envs/: barkour.py  barkour_gait.py  foraging.py  inverted_pendulum.py  unitree_curriculum.py  unitree_gait.py  unitree_gait_q.py  unitree_go1.py  unitree_go2.py  unitree_orientation.py  walter.py
tests/: BUILD  BUILD.bazel  distribution_test.py  estimator_test.cc  evaluation_test.py  gae_test.py  loss_test.py  networks_test.py  osc_interface_test.cc  policy_step_test.py  simulation_interface_test.cc
visualization/: visualization.html
